fix: 쿠키 전달을 위한 전체적인 수정